update style: - syntax highlighting in code blocks - correct wrapping of code blocks - cards always take up 100% of available width

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+@import "syntax.scss";
+
 html {
     font-family: "Noto Sans Malayalam", sans-serif;
     font-optical-sizing: auto;
@@ -40,12 +42,21 @@ a {
     }
 }
 
+// Code blocks
+pre {
+    padding: 8px;
+    border-radius: 2px;
+    tab-size: 4;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
 .attach-cards-to-top {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    :last-child {
+    > :last-child {
         border-top: none;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -71,10 +82,11 @@ a {
     filter: drop-shadow(0 25px 25px rgba(0, 0, 0, 0.15));
     border-radius: 8px;
     padding: 0px 16px;
-    height: 100%;
 
     min-width: 250px;
     max-width: 550px;
+    width: 100%;
+    height: 100%;
 
     &.posts {
         background-color: #151426;
